[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainLayout.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Atarian/SF Atarian System Extended Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/gui_buttons/music/music_on_unpressed.png" type="Texture" id=4]
[ext_resource path="res://assets/gui_buttons/music/music_on_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/mainmenu_unpressed.png" type="Texture" id=6]
[ext_resource path="res://assets/mainmenu_pressed.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="Settings" type="Node2D"]
pause_mode = 2
z_index = 4096
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 23.0389 ],
"_edit_vertical_guides_": [ 480.682 ]
}

[node name="MainLayout" parent="." instance=ExtResource( 2 )]

[node name="Title" parent="MainLayout" index="1"]
margin_left = 399.105
margin_top = 199.475
margin_right = 564.105
margin_bottom = 240.475
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 456.0
margin_top = 279.0
margin_right = 505.0
margin_bottom = 395.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 49.0
margin_bottom = 49.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="MainMenu" type="TextureButton" parent="."]
margin_left = 792.823
margin_top = 23.6697
margin_right = 922.823
margin_bottom = 72.6697
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="."]
margin_left = 325.611
margin_top = 287.402
margin_right = 431.611
margin_bottom = 317.402
custom_fonts/font = SubResource( 2 )
text = "Music :"

[node name="Sound" type="Label" parent="."]
margin_left = 326.611
margin_top = 362.402
margin_right = 431.611
margin_bottom = 392.402
custom_fonts/font = SubResource( 2 )
text = "Sound :"
[connection signal="pressed" from="VBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]

[editable path="MainLayout"]
